new file:   img/red-pepper.jpg 	new file:   img/tomatoes.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#">Home</a>
                 <a href="#">Contact</a>
                 <a href="#">Pricing</a>
-                <a href="https://wa.me+234" id="order">Order Now</a>
+                <a href="https://wa.me/09161136111?text=Hi%20Beacon,%20i%20will%20like%20to%20place%20an%20order%20of%20your%20Tomapep" target="_blank" id="order">Order Now</a>
             </nav>
         </header>
 
@@ -25,24 +25,41 @@
                 <p>
                     Let our fresh natural <span>Tomapep</span> do the magic to your meal
                 </p>
-                <h3><a href="https://wa.me+234">Place Order Now</a></h3>
+                <h3><a href="https://wa.me/09161136111?text=Hi%20Beacon,%20i%20will%20like%20to%20place%20an%20order%20of%20your%20Tomapep" target="_blank">Place Order Now</a></h3>
             </div>
             <img id="showcase" src="img/product_showcase.png" alt="">
         </section>
 
         <section class="pricing">
-
-        </section>
-
-        <section class="feedbacks">
-            <div>
-                <p></p>
-                <h4></h4>
+            <div id="img-pdt">
+                <img src="img/red-pepper.jpg" alt="red-pepper" class="img-pdt">
+                <img src="img/tomatoes.jpg" alt="tomatoes" class="img-pdt">
             </div>
 
-            <div>
-                <p></p>
-                <h4></h4>
+            <div id="pdct-details">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus illum ipsa asperiores iste expedita est eaque dignissimos laudantium eum vel quos ex reprehenderit ut, aperiam velit quas recusandae accusantium inventore.
+                </p>
+                <h3><a href="https://wa.me/09161136111?text=Hi%20Beacon,%20i%20will%20like%20to%20place%20an%20order%20of%20your%20Tomapep" target="_blank">Place Order Now</a></h3>
+            </div>
+        </section>
+        <h1>Users Review</h1>
+        <section class="feedbacks">
+            
+            <div class="testimonials">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aperiam placeat iure repellendus veritatis blanditiis tempore consectetur. Laborum optio reprehenderit aliquam dolorem aliquid fugiat ratione eius, libero, omnis sit ipsam?</p>
+                <h4>Customer Details</h4>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aperiam placeat iure repellendus veritatis blanditiis tempore consectetur. Laborum optio reprehenderit aliquam dolorem aliquid fugiat ratione eius, libero, omnis sit ipsam?</p>
+                <h4>Customer Details</h4>
+            </div>
+
+            <div class="testimonials">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit tempore cum iure rem quia repellat vero hic? Optio animi eaque quia nulla corrupti. Quasi ea, veniam corrupti repudiandae minima inventore?</p>
+                <h4>Customer Details</h4>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aperiam placeat iure repellendus veritatis blanditiis tempore consectetur. Laborum optio reprehenderit aliquam dolorem aliquid fugiat ratione eius, libero, omnis sit ipsam?</p>
+                <h4>Customer Details</h4>
             </div>
         </section>
 
