modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             </nav>
         </header>
 
+
+        
         <section class="hero">
             <div class="caption">
                 <h2>Skip the Market Hussle and Reclaim Your Time</h2>
@@ -30,6 +32,8 @@
             <img id="showcase" src="img/product_showcase.png" alt="">
         </section>
 
+
+
         <section class="pricing">
             <div id="img-pdt">
                 <img src="img/red-pepper.jpg" alt="red-pepper" class="img-pdt">
@@ -37,12 +41,40 @@
             </div>
 
             <div id="pdct-details">
+                <h5>Discover TOMAPEP: Freshness in Every Spoonful</h5>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus illum ipsa asperiores iste expedita est eaque dignissimos laudantium eum vel quos ex reprehenderit ut, aperiam velit quas recusandae accusantium inventore.
+                    Introducing BEACON TOMAPEP, where nature's finest tomatoes are transformed into the freshest and most delicious tomato paste you'll ever taste. We believe in delivering nothing but the best, and that starts with our commitment to quality and purity from farm to table.
+                </p>
+                <p>
+                    Our journey begins in the lush, sun-kissed fields where we cultivate the juiciest, ripest tomatoes. Grown with care and harvested at the peak of their ripeness, our tomatoes are a testament to nature's bounty. We partner with dedicated farmers who use sustainable farming practices to ensure that each tomato is as clean and natural as the earth intended.
                 </p>
                 <h3><a href="https://wa.me/09161136111?text=Hi%20Beacon,%20i%20will%20like%20to%20place%20an%20order%20of%20your%20Tomapep" target="_blank">Place Order Now</a></h3>
             </div>
         </section>
+
+
+
+        <section class="process">
+            <div id="process-details">
+                <h5>Pure and Natural Processing
+                    Ready to Use, Ready to Enjoy
+                    </h5>
+                <p>
+                    Once harvested, our tomatoes are swiftly transported to our state-of-the-art facility where the magic happens. We adhere to the highest standards of cleanliness and quality during the processing phase. Our advanced techniques preserve the natural flavors, vibrant colors, and essential nutrients of the tomatoes, ensuring that every batch of TOMAPEP tomato paste is as fresh as the day it was picked.
+                </p>
+                <p>
+                    From our farms to your kitchen, TOMAPEP tomato paste is carefully packaged to seal in the freshness. Our packaging is designed to keep the product as pure and delicious as the moment it was made, making it a convenient addition to any meal. Whether you're preparing a hearty pasta sauce, a zesty stew, or a classic homemade pizza, TOMAPEP is your go-to ingredient for an explosion of natural tomato goodness.
+                </p>
+            </div>
+
+            <div id="img-process">
+                <img src="img/red-pepper.jpg" alt="red-pepper" class="img-process">
+                <img src="img/tomatoes.jpg" alt="tomatoes" class="img-process">
+            </div>
+        </section>
+
+
+
         <h1>Users Review</h1>
         <section class="feedbacks">
             
