modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
 
 
-        
+
         <section class="hero">
             <div class="caption">
                 <h2>Skip the Market Hussle and Reclaim Your Time</h2>
@@ -68,8 +68,10 @@
             </div>
 
             <div id="img-process">
-                <img src="img/red-pepper.jpg" alt="red-pepper" class="img-process">
-                <img src="img/tomatoes.jpg" alt="tomatoes" class="img-process">
+                <img src="img/process/1.jpeg" alt="paste-processing" class="img-process">
+                <img src="img/process/2.jpeg" alt="paste-processing" class="img-process">
+                <img src="img/process/3.jpeg" alt="paste-processing" class="img-process">
+                <img src="img/process/4.jpeg" alt="paste-processing" class="img-process">
             </div>
         </section>
 
