modified:   index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <section class="location">
             <h1>Delivery Available Nationwide</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, explicabo quasi. Quibusdam facere debitis perspiciatis a suscipit mollitia quasi ea iure reiciendis, quos culpa doloremque! A harum quos accusamus assumenda.</p>
-            <h3><a href="https://wa.me/" target="_blank">Join the Community Now</a></h3>
+            <h3><a href="https://chat.whatsapp.com/KmXMqIkaLzMFALNK0J9aqE" target="_blank">Join the Community Now</a></h3>
         </section>
 
         <footer>
