modified:   index.html 	modified:   mediascreen.css

--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
 
         <section class="process">
             <div id="process-details">
-                <h5>Pure and Natural Processing</h5>
-                <p>
-                    Once harvested, our tomatoes are swiftly transported to our state-of-the-art facility where the magic happens. We adhere to the highest standards of cleanliness and quality during the processing phase. Our advanced techniques preserve the natural flavors, vibrant colors, and essential nutrients of the tomatoes, ensuring that every batch of TOMAPEP tomato paste is as fresh as the day it was picked.
-                </p>
-                <h5>Ready to Use, Ready to Enjoy</h5>
-                <p>
-                    From our farms to your kitchen, TOMAPEP tomato paste is carefully packaged to seal in the freshness. Our packaging is designed to keep the product as pure and delicious as the moment it was made, making it a convenient addition to any meal. Whether you're preparing a hearty pasta sauce, a zesty stew, or a classic homemade pizza, TOMAPEP is your go-to ingredient for an explosion of natural tomato goodness.
-                </p>
+                <div>
+                    <h5>Pure and Natural Processing</h5>
+                    <p>
+                        Once harvested, our tomatoes are swiftly transported to our state-of-the-art facility where the magic happens. We adhere to the highest standards of cleanliness and quality during the processing phase. Our advanced techniques preserve the natural flavors, vibrant colors, and essential nutrients of the tomatoes, ensuring that every batch of TOMAPEP tomato paste is as fresh as the day it was picked.
+                    </p>
+                </div>
+                <div>
+                    <h5>Ready to Use, Ready to Enjoy</h5>
+                    <p>
+                        From our farms to your kitchen, TOMAPEP tomato paste is carefully packaged to seal in the freshness. Our packaging is designed to keep the product as pure and delicious as the moment it was made, making it a convenient addition to any meal. Whether you're preparing a hearty pasta sauce, a zesty stew, or a classic homemade pizza, TOMAPEP is your go-to ingredient for an explosion of natural tomato goodness.
+                    </p>
+                </div>
             </div>
 
             <div id="img-process">
